# shiyebian

./: .env  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .packages  README.md  pubspec.yaml
.dart_tool/: package_config.json
.dart_tool/flutter_build/0f6d843d2fee9873aca40e039086c0d8/: .filecache  debug_android_application.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
android/: .gitignore  build.gradle  local.properties
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/example/site_blackboard_app/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
ios/: BlackBoard.plist  Podfile
ios/Flutter/: Debug.xcconfig  Generated.xcconfig  Release.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/app/: app.dart  app_component.dart  error_handler.dart  main.dart
lib/bloc/: bloc_base.dart  bloc_provider.dart
lib/config/: color_define.dart  icon_font.dart  lang_define.dart  routes.dart
lib/utility/: application_profile.dart  global_event.dart  jpeg_helper.dart  log.dart  orientation_helper.dart  request_permission.dart  widget_tools.dart  write_hash_value.dart
lib/views/: not_found_page.dart  test_page.dart
plugins/edit_exif/: .flutter-plugins  .flutter-plugins-dependencies  .packages
test/: widget_test.dart
(+80 files in other folders)
